--- a/front-end/app.json
+++ b/front-end/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "vibey",
-    "slug": "vibey",
+    "name": "front-end",
+    "slug": "front-end",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
