--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.9.0",
     "motion": "^12.9.7",
     "next": "15.3.1",
     "react": "^19.0.0",
