--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.0.2",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
+    "framer-motion": "^12.10.0",
     "motion": "^12.9.7",
     "next": "15.3.1",
     "react": "^19.0.0",
